<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Hitch</string>
    <string name="welcome_message">Hello World, HitchApp</string>
    <string name="success">Login Successful!</string>
    <string name="username">Username</string>
    <string name="PromptUsername">Enter a username...</string>
    <string name="create_an_account">Register an Account</string>
    <string name="cancel">Cancel</string>
    <string name="register_account">Register Account</string>
    <string name="login_to_hitch">Login to Hitch</string>
    <string name="register_progress_creating_account">Creating Account&#8230;</string>
    <string name="select_location">Select a Location</string>
    <string name="error_select_location">Please select a location.</string>
    <string name="user_image">userImage</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="login_error">Login Error:</string><string name="forgot_password">Forgot Password?</string>
    <string name="USER_PRFERENCES">UserPreferences</string>
    <string name="submit">Subit</string>
	<string name="search">Search</string>
	<string name="dialog_search_options">How would you like to search?</string>
	<string name="search_by_user">Search by User</string>
	<string name="search_by_location">Search by Location</string>
	<string name="search_near_me">Search near me</string>
</resources>
