<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
	<Button
			android:layout_marginTop="@dimen/large_margin"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:id="@+id/search_by_user_btn"
			android:layout_gravity="center_horizontal"
			android:text="@string/search_by_user"
			android:drawableLeft="@drawable/social_group"
			android:layout_marginLeft="@dimen/large_margin" android:layout_marginRight="@dimen/large_margin"/>
	<Button
			android:layout_marginTop="@dimen/small_margin"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:id="@+id/search_by_location_btn"
			android:layout_gravity="center_horizontal"
			android:text="@string/search_by_location"
			android:drawableLeft="@drawable/location_map"
			android:layout_marginLeft="@dimen/large_margin" android:layout_marginRight="@dimen/large_margin"/>
	<Button
			android:layout_marginTop="@dimen/small_margin"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:id="@+id/search_near_me_btn"
			android:layout_gravity="center_horizontal"
			android:text="@string/search_near_me"
			android:drawableLeft="@drawable/location_place"
			android:layout_marginLeft="@dimen/large_margin" android:layout_marginRight="@dimen/large_margin"/>

</LinearLayout>